--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@convex-dev/auth": "^0.0.80",
     "@turf/turf": "^7.2.0",
     "@types/plotly.js": "^3.0.3",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
+    "comparison": "^1.0.0",
     "convex": "^1.24.2",
+    "framer-motion": "^12.23.12",
     "init": "^0.1.2",
     "leaflet": "^1.9.4",
     "plotly.js": "^3.1.0",
@@ -34,7 +37,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "~10",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
